--- a/src/App.css
+++ b/src/App.css
@@ -18,14 +18,18 @@
   min-height: 100vh;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
 }
 
 .App-link {
   color: #61dafb;
+}
+
+ul,li{
+  margin:0;
+  padding: 0;
+  list-style: none;
 }
 
 @keyframes App-logo-spin {
